# Multi-Platform-System-Hardening-Tool

./: .gitignore  DESKTOP_GUI_SUMMARY.md  Dockerfile.centos-test  Dockerfile.test-collector  Dockerfile.ubuntu-test  LICENSE  PRIVILEGE_FIX_SUMMARY.md  PRODUCTION_CHECKLIST.md  README.md  TESTING.md  account_lockout_policy.ps1  apply_pam_pwquality.sh  auditd_rsyslog_config.py  build_release.sh  demo_privileges.sh  desktop_gui.py  disable_kernel_modules.sh  docker-compose.test.yml  gui.py  launch_gui.sh  pdf_report_generator.py  pyproject.toml  report_template.html  setup_and_test.py  shadow_hardening.sh  test_audit_results.json  test_comprehensive.sh  ufw_enforcer.py  windows_firewall.py  windows_password_policy.py
.github/: copilot-instructions.md
.github/workflows/: ci-security-tests.yml
docs/: CI_BUILD_NOTES.md  CLEANUP_SUMMARY.md  DESKTOP_GUI.md  PROJECT_STRUCTURE.md  RULE_EXPANSION.md  TESTING.md  TESTING_QUICK.md  UNIT_TESTING.md
hardening_tool/: __init__.py  cli.py  resource_finder.py  version_info.py
hardening_tool/core/: __init__.py  models.py  orchestrator.py
hardening_tool/database/: __init__.py  manager.py
hardening_tool/reporting/: __init__.py  generator.py
hardening_tool/reporting/templates/: compliance_report.html  report_styles.css
hardening_tool/rules/: __init__.py  loader.py
hardening_tool/rules/definitions/: linux_firewall.yaml  linux_ssh.yaml  linux_system.yaml  linux_users.yaml  windows_smb.yaml  windows_system.yaml
hardening_tool/utils/: os_detection.py
scripts/linux/: apply_mount_options.sh  harden_sshd.sh  setup_dev_env.sh
scripts/testing/: test_final_validation.sh  test_rule_coverage.sh  test_unit_framework.sh
scripts/windows/: annexure_a_audit_policy.ps1  disable_services.ps1  windows_user_rights.yaml
tests/: __init__.py  conftest.py  test_database.py  test_models.py  test_platforms.py
utilities/: audit_mount_options.py  generate_rules.py  hardener_core.py  pam_pwquality_audit.py
