[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hardening-tool"
version = "1.0.0"
description = "Multi-Platform System Hardening Tool - Automated security compliance enforcer for Windows, Ubuntu, and CentOS"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Amey", email = "your.email@example.com"},
]
keywords = ["security", "hardening", "compliance", "cis", "ntro"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "weasyprint>=60.0",
    "jinja2>=3.1.0",
    "psutil>=5.9.0",
    "cryptography>=41.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.5.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]
build = [
    "pyinstaller>=5.13.0",
]

[project.scripts]
hardening-tool = "hardening_tool.cli:main"

[project.urls]
Homepage = "https://github.com/amey/Multi-Platform_System_Hardening_Tool"
Repository = "https://github.com/amey/Multi-Platform_System_Hardening_Tool.git"
Issues = "https://github.com/amey/Multi-Platform_System_Hardening_Tool/issues"

[tool.hatch.build.targets.wheel]
packages = ["hardening_tool"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "I", "N", "B", "S", "C4", "UP"]
ignore = ["E501", "S101", "S603", "S607"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["hardening_tool"]

[tool.hatch.build]
include = [
    "hardening_tool/**/*.py",
    "hardening_tool/rules/definitions/*.yaml",
    "hardening_tool/reporting/templates/*.html",
    "hardening_tool/reporting/templates/*.css",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=hardening_tool --cov-report=html --cov-report=term-missing"